[gd_scene load_steps=10 format=3 uid="uid://bia7yrbdvp8vw"]

[ext_resource type="Script" uid="uid://bxnllekqfjvdf" path="res://godot4/elements/environments/ShieldWall.gd" id="1_vjsnw"]
[ext_resource type="Texture2D" uid="uid://csxyu2y2crrca" path="res://assets/sprites/signs/shield.png" id="2"]
[ext_resource type="Script" uid="uid://bpexb6wjfpakj" path="res://addons/randomAudioStreamPlayer/random_audio_stream_player_2D.gd" id="4"]
[ext_resource type="PackedScene" uid="uid://b3jyuprf7rhpo" path="res://godot4/effects/IsoPolygon.tscn" id="4_nffqm"]

[sub_resource type="Animation" id="1"]
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(0.5, 2),
"update": 0,
"values": [Color(1.7, 1.7, 1.7, 1), Color(1, 1, 1, 0.01)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.05),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"disable_collisions"
}]
}

[sub_resource type="Animation" id="2"]
resource_name = "Hit"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(0.5, 2),
"update": 0,
"values": [Color(1.7, 1.7, 1.7, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0.0117647)]
}

[sub_resource type="Animation" id="3"]
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.01), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_667pc"]
_data = {
&"Disappear": SubResource("1"),
&"Hit": SubResource("2"),
&"RESET": SubResource("4"),
&"reset": SubResource("3")
}

[node name="ShieldWall" type="Area2D"]
modulate = Color(1, 1, 1, 0.0117647)
collision_layer = 128
collision_mask = 4
script = ExtResource("1_vjsnw")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
unique_name_in_owner = true

[node name="IsoPolygon" parent="." instance=ExtResource("4_nffqm")]
unique_name_in_owner = true
height = 48.0
stroke_width = 6.0
fill = Color(0.28, 0.568, 1, 0.0784314)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_667pc")
}

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.439216, 0.670588, 1, 1)
self_modulate = Color(1, 1, 1, 0.27451)
z_index = 8
z_as_relative = false
position = Vector2(0, -48)
texture = ExtResource("2")

[node name="DamageSFX" type="AudioStreamPlayer2D" parent="."]
bus = &"SFX_effect"
script = ExtResource("4")
randomize_pitch = true
pitch_min = 0.9
pitch_max = 1.1

[connection signal="body_entered" from="." to="." method="_on_ShieldWall_body_entered"]
